kubernetes/apps/base/media/media-robbinsdale/bazarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  annotations:
    item.homer.rajsingh.info/name: Bazarr
    item.homer.rajsingh.info/subtitle: Subtitle Management
    item.homer.rajsingh.info/logo: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/bazarr.svg
    item.homer.rajsingh.info/keywords: tv, series, automation
    service.homer.rajsingh.info/name: Media
    service.homer.rajsingh.info/icon: fas fa-tv
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
  hostnames:
  - bazarr.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: bazarr
      port: 6767
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
